--- a/src/main/resources/templates/rooms/index.html
+++ b/src/main/resources/templates/rooms/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<head th:insert="fragments/general.html :: head">
+    <title>Text-based adventure game editor - All rooms</title>
 </head>
 <body>
-    <h1>All rooms</h1>
+    <div class="container">
+        <h1 class="mb-4">All rooms</h1>
 
-    <ul>
-        <li th:each="room : ${rooms}">
-            <a th:href="@{/rooms/{id}(id=${room.id})}" th:text="${room.name}"></a>
-        </li>
-    </ul>
+        <table class="table table-striped table-hover mb-3">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="room : ${rooms}">
+                    <th scope="row" th:text="${room.id}"></th>
+                    <td>
+                        <a th:href="@{/rooms/{id}(id=${room.id})}" th:text="${room.name}"></a>
+                    </td>
+                    <td th:text="${room.description}"></td>
+                    <td>
+                        <a class="btn btn-sm btn-primary" th:href="@{/rooms/{id}/update(id=${room.id})}">Edit</a>
+                    </td>
+                    <td>
+                        <form th:action="@{/rooms/{id}/delete(id=${room.id})}" method="post">
+                            <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                        </form>            
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="/rooms/create">Create new room</a>
+        <a class="btn btn-primary" href="/rooms/create">Create new room</a>
+    </div>
 </body>
 </html>
