--- a/src/main/resources/templates/rooms/edit.html
+++ b/src/main/resources/templates/rooms/edit.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <div class="container">
-    
+        <div th:insert="fragments/general.html :: flash"></div>
+
         <h1 th:if="${room.id == 0}" class="mb-4">Create new room</h1>
         <h1 th:unless="${room.id == 0}" class="mb-4">Update room #<span th:text="${room.id}"></span></h1>
 
