--- a/src/main/resources/templates/rooms/index.html
+++ b/src/main/resources/templates/rooms/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div class="container">
+        <div th:insert="fragments/general.html :: flash"></div>
+
         <h1 class="mb-4">All rooms</h1>
 
         <table class="table table-striped table-hover mb-3">
